# hackathon-24h

./: README.md  docker-compose.yaml
.github/workflows/: cd.yml  ci.yml
client/: Dockerfile  package.json  vite.config.js
client/src/: App.css  App.jsx
client/src/components/: AlertMessage.jsx  AuthButton.jsx  AuthForm.jsx  Dashboard.jsx  EditProjectModal.jsx  Layout.jsx  LogoutButton.jsx  ProjectModal.jsx  Projets.txt  Sidebar.jsx  StyledTextField.jsx  TopBar.jsx  UserInfo.jsx
client/src/components/Auth/: LonginForm.jsx  RegisterForm.jsx
client/src/components/Tasks/: ProjectTasks.jsx
client/src/context/: AuthContext.jsx  ProjectContext.txt
client/src/pages/: ProjectDetail.jsx  ProjectList.jsx
proxy/: default.conf
server/: .env  Dockerfile  pyproject.toml  pytest.ini  server_log.txt
server/server_config/: settings.py  urls.py
server/task_manager/: middlewares.py  models.py  tests.py  urls.py  views.py  views.txt  views_auth.py
server/task_manager/migrations/: 0001_initial.py
server/task_manager/utils/: jwt.py  jwt_auth.py
server/task_manager/views/: project_views.py  task_views.py
